--- a/fundamentals.ipynb
+++ b/fundamentals.ipynb
@@ -9,7 +9,8 @@
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "from numpy import where\n",
-    "from pandas import concat"
+    "from pandas import concat\n",
+    "from sklearn.utils import resample"
    ]
   },
   {
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +81,476 @@
     "    stock_df['direction'] = where(stock_df['prev_change'].shift(-days_ahead) > stock_df['prev_change'], 1, -1)\n",
     "    \n",
     "    # Drop nulls generated from rolling columns\n",
-    "    stockdf.dropna(axis=0, inplace=True)\n",
+    "    stock_df.dropna(axis=0, inplace=True)\n",
     "    \n",
-    "    # \n",
-    "    "
+    "    # split stock_df to train and test dataframes\n",
+    "    split = int(stock_df.shape[0] * 0.85)\n",
+    "    train = stock_df[:split]\n",
+    "    test = stock_df[split:]\n",
+    "    \n",
+    "    # upsample target class inbalance for 'direction' column in train dataframe\n",
+    "    train_major = train[train['direction'] == -1]\n",
+    "    train_minor = train[train['direction'] == 1]\n",
+    "    \n",
+    "    train_minor_upsampled = resample(train_minor\n",
+    "                                     , replace = True\n",
+    "                                     , n_samples = train_major.shape[0]\n",
+    "                                     , random_state = 42\n",
+    "                                    )\n",
+    "    \n",
+    "    train_upsampled = concat([train_major, train_minor_upsampled])\n",
+    "    \n",
+    "    # shuffle train dataframe \n",
+    "    train = train_upsampled.sample(frac=1).reset_index(drop=True)\n",
+    "    \n",
+    "    # features of model\n",
+    "    features = ['oc'\n",
+    "                , 'hl'\n",
+    "                , '13std'\n",
+    "                , '13mva'\n",
+    "               ]\n",
+    "    \n",
+    "    # X_train, X_test, y_train, y_test\n",
+    "    X_train = train[features]\n",
+    "    y_train = train['direction']\n",
+    "    \n",
+    "    X_test = test[features]\n",
+    "    y_test = test['direction']\n",
+    "    \n",
+    "    return X_train, X_test, y_train, y_test, stock_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test, stock_df = data('aapl', 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>oc</th>\n",
+       "      <th>hl</th>\n",
+       "      <th>13std</th>\n",
+       "      <th>13mva</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2939</th>\n",
+       "      <td>0.008571</td>\n",
+       "      <td>0.023120</td>\n",
+       "      <td>0.016232</td>\n",
+       "      <td>-0.002866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2708</th>\n",
+       "      <td>-0.013224</td>\n",
+       "      <td>0.030531</td>\n",
+       "      <td>0.022421</td>\n",
+       "      <td>-0.013756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4766</th>\n",
+       "      <td>-0.005254</td>\n",
+       "      <td>0.015443</td>\n",
+       "      <td>0.009604</td>\n",
+       "      <td>0.002449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3574</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.006849</td>\n",
+       "      <td>0.029577</td>\n",
+       "      <td>0.003639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4548</th>\n",
+       "      <td>-0.034245</td>\n",
+       "      <td>0.057557</td>\n",
+       "      <td>0.056839</td>\n",
+       "      <td>-0.019048</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            oc        hl     13std     13mva\n",
+       "2939  0.008571  0.023120  0.016232 -0.002866\n",
+       "2708 -0.013224  0.030531  0.022421 -0.013756\n",
+       "4766 -0.005254  0.015443  0.009604  0.002449\n",
+       "3574  0.000000  0.006849  0.029577  0.003639\n",
+       "4548 -0.034245  0.057557  0.056839 -0.019048"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>oc</th>\n",
+       "      <th>hl</th>\n",
+       "      <th>13std</th>\n",
+       "      <th>13mva</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-04-19</th>\n",
+       "      <td>-0.005525</td>\n",
+       "      <td>0.015811</td>\n",
+       "      <td>0.014958</td>\n",
+       "      <td>0.002882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-30</th>\n",
+       "      <td>-0.011604</td>\n",
+       "      <td>0.014182</td>\n",
+       "      <td>0.015155</td>\n",
+       "      <td>-0.005970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-26</th>\n",
+       "      <td>-0.025410</td>\n",
+       "      <td>0.044967</td>\n",
+       "      <td>0.016869</td>\n",
+       "      <td>0.006271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-04-10</th>\n",
+       "      <td>0.001445</td>\n",
+       "      <td>0.014400</td>\n",
+       "      <td>0.021376</td>\n",
+       "      <td>0.001094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-11-11</th>\n",
+       "      <td>-0.002234</td>\n",
+       "      <td>0.019182</td>\n",
+       "      <td>0.018993</td>\n",
+       "      <td>-0.001447</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  oc        hl     13std     13mva\n",
+       "Date                                              \n",
+       "2018-04-19 -0.005525  0.015811  0.014958  0.002882\n",
+       "2015-12-30 -0.011604  0.014182  0.015155 -0.005970\n",
+       "2019-03-26 -0.025410  0.044967  0.016869  0.006271\n",
+       "2018-04-10  0.001445  0.014400  0.021376  0.001094\n",
+       "2015-11-11 -0.002234  0.019182  0.018993 -0.001447"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7304    1\n",
+       "3034    1\n",
+       "2250   -1\n",
+       "1247   -1\n",
+       "6002   -1\n",
+       "Name: direction, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2017-06-22    1\n",
+       "2016-07-29    1\n",
+       "2017-07-03    1\n",
+       "2016-05-19    1\n",
+       "2021-04-28    1\n",
+       "Name: direction, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "      <th>oc</th>\n",
+       "      <th>hl</th>\n",
+       "      <th>prev_change</th>\n",
+       "      <th>13std</th>\n",
+       "      <th>13mva</th>\n",
+       "      <th>direction</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-07-06</th>\n",
+       "      <td>140.070007</td>\n",
+       "      <td>143.149994</td>\n",
+       "      <td>140.070007</td>\n",
+       "      <td>142.020004</td>\n",
+       "      <td>108181800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.013922</td>\n",
+       "      <td>0.021989</td>\n",
+       "      <td>0.014718</td>\n",
+       "      <td>0.008923</td>\n",
+       "      <td>0.006773</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-07</th>\n",
+       "      <td>143.539993</td>\n",
+       "      <td>144.889999</td>\n",
+       "      <td>142.660004</td>\n",
+       "      <td>144.570007</td>\n",
+       "      <td>104911600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.007176</td>\n",
+       "      <td>0.015632</td>\n",
+       "      <td>0.017955</td>\n",
+       "      <td>0.009328</td>\n",
+       "      <td>0.007185</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-08</th>\n",
+       "      <td>141.580002</td>\n",
+       "      <td>144.059998</td>\n",
+       "      <td>140.669998</td>\n",
+       "      <td>143.240005</td>\n",
+       "      <td>105575500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.011725</td>\n",
+       "      <td>0.024099</td>\n",
+       "      <td>-0.009200</td>\n",
+       "      <td>0.009193</td>\n",
+       "      <td>0.007254</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-09</th>\n",
+       "      <td>142.750000</td>\n",
+       "      <td>145.649994</td>\n",
+       "      <td>142.649994</td>\n",
+       "      <td>145.110001</td>\n",
+       "      <td>99788400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.016532</td>\n",
+       "      <td>0.021030</td>\n",
+       "      <td>0.013055</td>\n",
+       "      <td>0.009132</td>\n",
+       "      <td>0.007173</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-12</th>\n",
+       "      <td>146.210007</td>\n",
+       "      <td>146.320007</td>\n",
+       "      <td>144.000000</td>\n",
+       "      <td>144.500000</td>\n",
+       "      <td>76196700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.011696</td>\n",
+       "      <td>0.016111</td>\n",
+       "      <td>-0.004204</td>\n",
+       "      <td>0.009477</td>\n",
+       "      <td>0.005873</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Open        High         Low       Close     Volume  \\\n",
+       "Date                                                                    \n",
+       "2021-07-06  140.070007  143.149994  140.070007  142.020004  108181800   \n",
+       "2021-07-07  143.539993  144.889999  142.660004  144.570007  104911600   \n",
+       "2021-07-08  141.580002  144.059998  140.669998  143.240005  105575500   \n",
+       "2021-07-09  142.750000  145.649994  142.649994  145.110001   99788400   \n",
+       "2021-07-12  146.210007  146.320007  144.000000  144.500000   76196700   \n",
+       "\n",
+       "            Dividends  Stock Splits        oc        hl  prev_change  \\\n",
+       "Date                                                                   \n",
+       "2021-07-06        0.0           0.0  0.013922  0.021989     0.014718   \n",
+       "2021-07-07        0.0           0.0  0.007176  0.015632     0.017955   \n",
+       "2021-07-08        0.0           0.0  0.011725  0.024099    -0.009200   \n",
+       "2021-07-09        0.0           0.0  0.016532  0.021030     0.013055   \n",
+       "2021-07-12        0.0           0.0 -0.011696  0.016111    -0.004204   \n",
+       "\n",
+       "               13std     13mva  direction  \n",
+       "Date                                       \n",
+       "2021-07-06  0.008923  0.006773          1  \n",
+       "2021-07-07  0.009328  0.007185         -1  \n",
+       "2021-07-08  0.009193  0.007254          1  \n",
+       "2021-07-09  0.009132  0.007173         -1  \n",
+       "2021-07-12  0.009477  0.005873         -1  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_df.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
