--- a/slopes.ipynb
+++ b/slopes.ipynb
@@ -96,124 +96,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1999-12-21</th>\n",
-       "      <td>0.750673</td>\n",
-       "      <td>0.787944</td>\n",
-       "      <td>0.748762</td>\n",
-       "      <td>0.783644</td>\n",
-       "      <td>307596800</td>\n",
+       "      <th>2005-08-26</th>\n",
+       "      <td>1.410406</td>\n",
+       "      <td>1.417134</td>\n",
+       "      <td>1.387164</td>\n",
+       "      <td>1.398785</td>\n",
+       "      <td>261058000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.043922</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.031901</td>\n",
-       "      <td>-0.002858</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.035750</td>\n",
-       "      <td>-0.004952</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.035529</td>\n",
-       "      <td>0.005534</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-01-27</th>\n",
-       "      <td>0.831905</td>\n",
-       "      <td>0.863920</td>\n",
-       "      <td>0.818047</td>\n",
-       "      <td>0.840984</td>\n",
-       "      <td>340144000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.010914</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.039438</td>\n",
-       "      <td>0.012106</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.050851</td>\n",
-       "      <td>0.008917</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.053532</td>\n",
-       "      <td>0.006785</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1996-02-12</th>\n",
-       "      <td>0.215024</td>\n",
-       "      <td>0.217891</td>\n",
-       "      <td>0.214069</td>\n",
-       "      <td>0.216935</td>\n",
-       "      <td>194275200</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.008888</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.025646</td>\n",
-       "      <td>0.003644</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.034157</td>\n",
-       "      <td>-0.009248</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.034896</td>\n",
-       "      <td>-0.007808</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-04-04</th>\n",
-       "      <td>13.460706</td>\n",
-       "      <td>13.499185</td>\n",
-       "      <td>13.196618</td>\n",
-       "      <td>13.273268</td>\n",
-       "      <td>358447600</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>8</td>\n",
        "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-0.013925</td>\n",
+       "      <td>-0.008240</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.013276</td>\n",
-       "      <td>-0.009489</td>\n",
+       "      <td>0.011277</td>\n",
+       "      <td>-0.001330</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.015935</td>\n",
-       "      <td>-0.002693</td>\n",
+       "      <td>0.021216</td>\n",
+       "      <td>0.003510</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.015604</td>\n",
-       "      <td>-0.000263</td>\n",
+       "      <td>0.019046</td>\n",
+       "      <td>0.002237</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998-08-11</th>\n",
+       "      <td>0.288611</td>\n",
+       "      <td>0.313457</td>\n",
+       "      <td>0.285743</td>\n",
+       "      <td>0.298167</td>\n",
+       "      <td>1759475200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.033110</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.035398</td>\n",
+       "      <td>0.008865</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.032319</td>\n",
+       "      <td>0.008979</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.033686</td>\n",
+       "      <td>0.007173</td>\n",
        "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-12-31</th>\n",
-       "      <td>0.077207</td>\n",
-       "      <td>0.077643</td>\n",
-       "      <td>0.077207</td>\n",
-       "      <td>0.077207</td>\n",
-       "      <td>54656000</td>\n",
+       "      <th>1988-09-22</th>\n",
+       "      <td>0.303370</td>\n",
+       "      <td>0.310425</td>\n",
+       "      <td>0.301606</td>\n",
+       "      <td>0.310425</td>\n",
+       "      <td>145667200</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>12</td>\n",
+       "      <td>9</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.023254</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.031028</td>\n",
-       "      <td>-0.003735</td>\n",
+       "      <td>0.017687</td>\n",
+       "      <td>0.009002</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.043121</td>\n",
-       "      <td>0.013657</td>\n",
+       "      <td>0.020623</td>\n",
+       "      <td>0.008039</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.035056</td>\n",
-       "      <td>0.008807</td>\n",
+       "      <td>0.020692</td>\n",
+       "      <td>0.005353</td>\n",
        "      <td>1</td>\n",
        "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-06-15</th>\n",
+       "      <td>0.307342</td>\n",
+       "      <td>0.317280</td>\n",
+       "      <td>0.295874</td>\n",
+       "      <td>0.312540</td>\n",
+       "      <td>454624800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.016914</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.033340</td>\n",
+       "      <td>-0.002526</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.037081</td>\n",
+       "      <td>-0.003128</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.031411</td>\n",
+       "      <td>-0.007335</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1991-09-16</th>\n",
+       "      <td>0.358643</td>\n",
+       "      <td>0.358643</td>\n",
+       "      <td>0.338617</td>\n",
+       "      <td>0.344079</td>\n",
+       "      <td>205777600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.040609</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.030147</td>\n",
+       "      <td>-0.010304</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.023431</td>\n",
+       "      <td>-0.009962</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.026202</td>\n",
+       "      <td>-0.005241</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -221,37 +221,37 @@
        "</div>"
       ],
       "text/plain": [
-       "                 Open       High        Low      Close     Volume  Dividends  \\\n",
-       "Date                                                                           \n",
-       "1999-12-21   0.750673   0.787944   0.748762   0.783644  307596800        0.0   \n",
-       "2000-01-27   0.831905   0.863920   0.818047   0.840984  340144000        0.0   \n",
-       "1996-02-12   0.215024   0.217891   0.214069   0.216935  194275200        0.0   \n",
-       "2013-04-04  13.460706  13.499185  13.196618  13.273268  358447600        0.0   \n",
-       "1981-12-31   0.077207   0.077643   0.077207   0.077207   54656000        0.0   \n",
+       "                Open      High       Low     Close      Volume  Dividends  \\\n",
+       "Date                                                                        \n",
+       "2005-08-26  1.410406  1.417134  1.387164  1.398785   261058000        0.0   \n",
+       "1998-08-11  0.288611  0.313457  0.285743  0.298167  1759475200        0.0   \n",
+       "1988-09-22  0.303370  0.310425  0.301606  0.310425   145667200        0.0   \n",
+       "2001-06-15  0.307342  0.317280  0.295874  0.312540   454624800        0.0   \n",
+       "1991-09-16  0.358643  0.358643  0.338617  0.344079   205777600        0.0   \n",
        "\n",
        "            Stock Splits  month  dayofweek        oc  ...  8stdev_adj  \\\n",
        "Date                                                  ...               \n",
-       "1999-12-21           0.0     12          1  0.043922  ...    0.031901   \n",
-       "2000-01-27           0.0      1          3  0.010914  ...    0.039438   \n",
-       "1996-02-12           0.0      2          0  0.008888  ...    0.025646   \n",
-       "2013-04-04           0.0      4          3 -0.013925  ...    0.013276   \n",
-       "1981-12-31           0.0     12          3  0.000000  ...    0.031028   \n",
+       "2005-08-26           0.0      8          4 -0.008240  ...    0.011277   \n",
+       "1998-08-11           0.0      8          1  0.033110  ...    0.035398   \n",
+       "1988-09-22           0.0      9          3  0.023254  ...    0.017687   \n",
+       "2001-06-15           0.0      6          4  0.016914  ...    0.033340   \n",
+       "1991-09-16           0.0      9          0 -0.040609  ...    0.030147   \n",
        "\n",
        "            8sma_adj  8sma_close  13stdev_adj  13sma_adj  13sma_close  \\\n",
        "Date                                                                    \n",
-       "1999-12-21 -0.002858           1     0.035750  -0.004952            1   \n",
-       "2000-01-27  0.012106           1     0.050851   0.008917            1   \n",
-       "1996-02-12  0.003644           1     0.034157  -0.009248            1   \n",
-       "2013-04-04 -0.009489           1     0.015935  -0.002693            1   \n",
-       "1981-12-31 -0.003735           1     0.043121   0.013657            1   \n",
+       "2005-08-26 -0.001330           1     0.021216   0.003510            1   \n",
+       "1998-08-11  0.008865           1     0.032319   0.008979            1   \n",
+       "1988-09-22  0.009002           1     0.020623   0.008039            1   \n",
+       "2001-06-15 -0.002526           1     0.037081  -0.003128            1   \n",
+       "1991-09-16 -0.010304           1     0.023431  -0.009962            1   \n",
        "\n",
        "            21stdev_adj  21sma_adj  21sma_close  direction  \n",
        "Date                                                        \n",
-       "1999-12-21     0.035529   0.005534            1         -1  \n",
-       "2000-01-27     0.053532   0.006785            1         -1  \n",
-       "1996-02-12     0.034896  -0.007808            1         -1  \n",
-       "2013-04-04     0.015604  -0.000263            1         -1  \n",
-       "1981-12-31     0.035056   0.008807            1         -1  \n",
+       "2005-08-26     0.019046   0.002237            1          1  \n",
+       "1998-08-11     0.033686   0.007173            1         -1  \n",
+       "1988-09-22     0.020692   0.005353            1         -1  \n",
+       "2001-06-15     0.031411  -0.007335            1         -1  \n",
+       "1991-09-16     0.026202  -0.005241            1          1  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
@@ -1121,16 +1121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sample['slope3'] = df_sample.iloc[2:].apply(lambda x: slope3(x.roll, [1, 2, 3]), axis=1)"
+    "df_sample['slope3'] = df_sample.iloc[2:].apply(lambda x: slope3(x.roll, [-1, 0, 1]), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1531,7 @@
        "2022-02-04  [175.6162567138672, 172.67999267578125, 172.38... -0.506358  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,6 +1558,26 @@
    ],
    "source": [
     "[x for x in range(1, 4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([x for x in range(-10,11)])"
    ]
   },
   {
